--- a/IPG and Charger/IPG PCBA/Source Files (Altium)/README
+++ b/IPG and Charger/IPG PCBA/Source Files (Altium)/README
@@ -1,1 +1,3 @@
-These files were generated using [Altium Designer](https://www.altium.com/), a closed-source PCB design software. For outside developers we recommend [KiCad](https://www.kicad.org/), which is an open-source PCB design software. A script for converting Altium files into KiCad files can be found [here.](https://www.kicad.org/external-tools/altium2kicad/)
+These files were generated using [Altium Designer](https://www.altium.com/), a closed-source PCB design software. 
+For outside developers we recommend [KiCad](https://www.kicad.org/), which is an open-source PCB design software. 
+A script for converting Altium files into KiCad files can be found [here.](https://www.kicad.org/external-tools/altium2kicad/)
