--- a/IPG and Charger/IPG PCBA/README
+++ b/IPG and Charger/IPG PCBA/README
@@ -1,6 +1,11 @@
-# Overview
+## Overview
 
-This folder contains source files and information around the Printed Circuit Board contained inside the Implantable Pulse Generator (IPG). This PCB was designed for CARSS by Medipace Inc. (https://www.medipaceinc.com/). Editable source files, generated using Altium, can be found in the Source Files folder.
+This folder contains files and information around the Printed Circuit Board contained inside the Implantable Pulse Generator (IPG). This PCB was designed for CARSS by Medipace Inc. (https://www.medipaceinc.com/). Editable source files, generated using Altium, can be found in the Source Files folder.
 
-# Design
-The purpose of this PCBA is multi-fold: to provide bidirectional data transmission with an external device via Bluetooth; to wirelessly charge the battery cells of the IPG; to provide current-based neuromodulation to leads; to monitor impedance on those leads; to interface with texttexttext [ALEX UPDATE THIS TOMORROW!]
+## Design
+The purpose of this PCBA is to regulate power, communication, neuromodulation, and biomarker sensing. Individual sections of the PCB are explained below.
+
+#Power Regulation
+
+
+## Current Status - 29 June 2023
