--- a/IPG and Charger/IPG PCBA/README
+++ b/IPG and Charger/IPG PCBA/README
@@ -9,3 +9,5 @@ The purpose of this PCBA is to regulate power, communication, neuromodulation, a
 
 
 ## Current Status - 29 June 2023
+The first revision of the PCBA has been taped out and assembled; testing is expected to be finished by the end of 2023.
+![Photograph of a test PCBA](/images/Test Board rev1.jpg)
