--- a/Chemical Sensors/Thin Film Electrode Design/README
+++ b/Chemical Sensors/Thin Film Electrode Design/README
@@ -1,1 +1,2 @@
 This folder contains files describing the design and manufacture of the thin-film Parylene C - Platinum electrodes used for testing the acetylcholine, catecholamine, pH, counter, and reference electrodes on the benchtop.
+For initial tests, these electrodes were fabricated at the PIE Foundry at USC: https://piefoundry.usc.edu/
