--- a/Chemical Sensors/README
+++ b/Chemical Sensors/README
@@ -1,1 +1,1 @@
-This folder contains design files for the pH and neurotransmitter sensors
+This folder contains design files for neurotransmitters and pH sensor developed for the CARSS Center at USC, under the direction of [Professor Maral Mousavi](https://sites.usc.edu/mousavi/).
