--- a/Physical Sensors/README
+++ b/Physical Sensors/README
@@ -1,1 +1,1 @@
-asdf
+Physical sensors for strain and temperature are developed at USC under the direction of [Dr. Hangbo Zhao](https://sites.usc.edu/zhaogroup/)
